# faraday

./: .gitignore  README.md  configure.md
.github/workflows/: sandbox-daemon-ci.yml
docs/concept/: agentic-search-faraday.md  agentic-search.md
docs/design/faradayd-server-mode/: 00-overview.md  01-context.md  02-architecture.md  03-sequences.md  04-domain.md  05-tech-stack.md  06-regulatory.md  07-cross-cutting.md  08-interfaces.md  09-decisions.md  10-risks.md  99-changelog.md  README.md
docs/design/obo-broker/: 00-overview.md  01-context.md  02-architecture.md  03-sequences.md  04-domain.md  05-tech-stack.md  06-regulatory.md  07-cross-cutting.md  08-interfaces.md  09-decisions.md  10-risks.md  README.md
docs/design/sandbox-daemon/: 00-overview.md  01-context.md  02-architecture.md  03-sequences.md  04-domain.md  05-tech-stack.md  06-regulatory.md  07-cross-cutting.md  08-interfaces.md  09-decisions.md  10-risks.md  11-policy-schema.md  12-authoring-guide.md  99-changelog.md  README.md
docs/design/sandbox-daemon/schema/: pysandbox.policy.schema.json
docs/security/: threat-model.md
docs/spec/faradayd-server-mode/: phase-1-analysis.md  phase-2-architecture.md  phase-3-components.md  phase-4-cross-cutting.md  phase-5-playbook.md  phase-6-audit.md
docs/spec/obo-broker/: phase-1-analysis.md  phase-2-architecture.md  phase-3-components.md  phase-4-cross-cutting.md  phase-5-playbook.md  phase-6-audit.md
docs/spec/sandbox-daemon/: phase-1-analysis.md  phase-2-architecture.md  phase-3-components.md  phase-4-cross-cutting.md  phase-5-playbook.md  phase-6-audit.md  windows-peer-auth.md
sandbox-daemon/: CHECKSUMS.txt  Cargo.toml  Makefile  deny.toml  get-started.md  rust-toolchain.toml
sandbox-daemon/ci/: windows-msi-smoke.ps1  windows-pentest.ps1
sandbox-daemon/examples/demo/: .env.sample  .gitignore  README.md  dex-config.yaml  docker-compose.yml  pysandbox.policy.json
sandbox-daemon/guest/: Cargo.toml
sandbox-daemon/guest/src/: main.rs
sandbox-daemon/ipc/: Cargo.toml
sandbox-daemon/ipc/examples/: pipe_probe.rs
sandbox-daemon/ipc/src/: lib.rs
sandbox-daemon/ipc/tests/: windows_peer_auth.rs
sandbox-daemon/packaging/macos/: build-pkg.sh  dev.faraday.faradayd.plist
sandbox-daemon/packaging/macos/scripts/: postinstall
sandbox-daemon/packaging/windows/: build-msi.ps1  faradayd.wxs
sandbox-daemon/src/: audit.rs  broker.rs  clientauth.rs  config.rs  controller.rs  downstream.rs  endpoint.rs  errors.rs  health.rs  install.rs  interaction.rs  lib.rs  log.rs  main.rs  mcp.rs  mcp_upstream.rs  obo.rs  policy.rs  runtime.rs  sanitize.rs  session.rs  types.rs
sandbox-daemon/tests/: broker.rs  clients.rs  consent.rs  controller.rs  e2e.rs  e2e_mac.rs  e2e_real_signin.rs  endpoint.rs  foundations.rs  install_macos.rs  leaves.rs  logging.rs  mcp.rs  runtime.rs  server_mode_apikey.rs  server_mode_none.rs  signin.rs  signin_real_dex.rs
